--- a/src/app/features/memorial/memorial-section.html
+++ b/src/app/features/memorial/memorial-section.html
@@ -7,7 +7,7 @@
         <div class="memorial-image mb-4">
           <img src="/images/memorial/marianne-with-bird.jpg" 
                alt="Marianne Hofer mit Vogel" 
-               class="img-fluid rounded-circle shadow memorial-photo"
+               class="img-fluid hadow memorial-photo"
                (error)="onImageError($event)">
         </div>
         
