no more festival young

--- a/src/app/features/theater-info/theater-info-section.html
+++ b/src/app/features/theater-info/theater-info-section.html
@@ -48,7 +48,7 @@
           dem sie sich zum Teil auch aktiv beteiligen können.
         </p>
         
-        <div class="collaboration-info mt-4 p-3 rounded">
+        <!--div class="collaboration-info mt-4 p-3 rounded">
           <p class="mb-3">
             <strong>Zusammenarbeit mit Lucerne Festival „Young"</strong>
           </p>
@@ -71,7 +71,7 @@
             MusikerInnen so hautnah erleben und vielleicht sogar ihr Musikinstrument erlernen möchten.
           </p>
         </div>
-      </div>
+      </div-->
     </div>
   </div>
 </div>
