--- a/src/app/features/memorial/memorial-section.html
+++ b/src/app/features/memorial/memorial-section.html
@@ -8,6 +8,9 @@
           <img src="/images/memorial/marianne-with-bird.jpg" 
                alt="Marianne Hofer mit Vogel" 
                class="img-fluid hadow memorial-photo"
+               width="800"
+               height="600"
+               loading="lazy"
                (error)="onImageError($event)">
         </div>
         
