--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -11,7 +11,7 @@
         @for (member of bandMembers(); track member.id) {
           <div class="card-hover member-card pt-4 pb-4" (click)="openMemberBio(member)">
             <div class="member-profile position-relative overflow-hidden mb-3 text-center">
-              <img class="img-fluid bw-filter mx-auto d-inline-block rounded-circle" [src]="member.image" [alt]="member.name">
+              <img class="img-fluid bw-filter mx-auto d-inline-block rounded-circle" [src]="member.image" [alt]="member.name" width="300" height="300" loading="lazy">
             </div>
             <span class="badge member-label text-uppercase mb-5">{{ member.instrument }}</span>
             <h3 class="member-name mt-0 mb-3">{{ member.name }}</h3>
