--- a/src/app/features/memorial/memorial-section.html
+++ b/src/app/features/memorial/memorial-section.html
@@ -45,7 +45,7 @@
           </p>
           
           <p class="memorial-future fs-6 text-white fw-medium mb-4">
-            Das Petruschka Team - Röbi Hofer, Nathalie Hildebrand-Isler und Regula Auf der 
+            Das Petruschka Team - Röbi Hofer, Nathalie Hildebrand Isler und Regula Auf der 
             Maur – wird dieses kostbare Erbe in Ehren tragen. Mit grossem Respekt und 
             Engagement lassen wir die von Marianne entzündete Flamme weiterleuchten, damit 
             auch in Zukunft mystische und zauberhafte Welten entstehen. Für die Kleinen, die 
