--- a/src/app/features/press/press-section.html
+++ b/src/app/features/press/press-section.html
@@ -1,6 +1,6 @@
 <!-- Press Carousel -->
 @if (pressReleases.length > 0) {
-  <div class="press-section mt-5">
+  <div class="press-section section">
     <h3 class="section-subtitle text-white fs-4 fw-bold mb-5 text-center">Presseartikel</h3>
     <div 
       id="press-carousel" 
