--- a/src/app/features/memorial/memorial-section.html
+++ b/src/app/features/memorial/memorial-section.html
@@ -5,8 +5,8 @@
       <div class="memorial-content text-center">
         <!-- Placeholder for Marianne with bird image -->
         <div class="memorial-image mb-4">
-          <img src="/images/memorial/marianne-with-bird.jpg" 
-               alt="Marianne Hofer mit Vogel" 
+          <img src="https://petruschka.netlify.app/.netlify/images?url=https://petruschka-analog-mongo.onrender.com/images/memorial/marianne-with-bird.jpg&nf_resize=fit&w=800" 
+               alt="Marianne Hofer" 
                class="img-fluid hadow memorial-photo"
                width="800"
                height="600"
