--- a/src/app/features/merch/merch-section.html
+++ b/src/app/features/merch/merch-section.html
@@ -54,7 +54,7 @@
       
       <div class="col-lg-6">
         <div class="wandertheater-image text-center">
-          <img src="/images/placeholder.svg" 
+          <img src="https://petruschka.netlify.app/.netlify/images?url=https://petruschka-analog-mongo.onrender.com/images/education/wandertheater-placeholder.jpg&nf_resize=fit&w=800" 
                alt="Wandertheater Petruschka" 
                class="img-fluid"
                width="800"
