--- a/src/app/features/contact/contact-section.html
+++ b/src/app/features/contact/contact-section.html
@@ -6,7 +6,7 @@
     <app-memorial-section class="mb-5"></app-memorial-section>
     
     <!-- Theater Info Component -->
-    <app-theater-info-section class="mb-5"></app-theater-info-section>
+    <app-theater-info-section class="mb-5 mt-3"></app-theater-info-section>
     
     <!-- Press Component -->
     <app-press-section></app-press-section>
