--- a/src/app/features/memorial/memorial-section.html
+++ b/src/app/features/memorial/memorial-section.html
@@ -1,5 +1,5 @@
 <!-- Memorial Section for Marianne Hofer -->
-<div class="memorial-section text-center p-5 rounded-3 border">
+<div class="memorial-section text-center p-5 rounded-3 mb-5">
   <div class="row justify-content-center">
     <div class="col-lg-10">
       <div class="memorial-content text-center">
