--- a/src/app/features/theater-info/theater-info-section.html
+++ b/src/app/features/theater-info/theater-info-section.html
@@ -2,7 +2,7 @@
 <div class="current-team-section mb-5">
   <!--h3 class="section-subtitle">Das heutige Team</h3-->
   <div class="team-photo text-center">
-    <img src="/images/team/current-team-photo.jpg" 
+    <img src="https://petruschka.netlify.app/.netlify/images?url=https://petruschka-analog-mongo.onrender.com/images/team/current-team-photo.jpg&nf_resize=fit&w=1200" 
          alt="Das Petruschka Team: Marianne, Röbi, Nathalie und Regula" 
          class="img-fluid rounded shadow"
          width="1200"
