--- a/src/app/features/theater-info/theater-info-section.html
+++ b/src/app/features/theater-info/theater-info-section.html
@@ -1,7 +1,7 @@
 <!-- Current Team Photo -->
-<div class="current-team-section mb-5">
+<div class="current-team-section mb-5 d-flex justify-content-center">
   <!--h3 class="section-subtitle">Das heutige Team</h3-->
-  <div class="team-photo text-center">
+  <!--div class="team-photo text-center">
     <img src="https://petruschka.netlify.app/.netlify/images?url=https://petruschka-analog-mongo.onrender.com/images/team/current-team-photo.jpg&nf_resize=fit&w=1200" 
          alt="Das Petruschka Team: Marianne, Röbi, Nathalie und Regula" 
          class="img-fluid rounded shadow"
@@ -12,6 +12,9 @@
     <p class="team-caption mt-2 text-muted">
       <small>Marianne, Röbi, Nathalie und Regula</small>
     </p>
+  </div-->
+  <div class="w-100 d-flex justify-content-center">
+    <youtube-player videoId="QlFGxtoQOXM" placeholderImageQuality="high" />
   </div>
 </div>
 
