--- a/src/app/features/memorial/memorial-section.html
+++ b/src/app/features/memorial/memorial-section.html
@@ -5,13 +5,17 @@
       <div class="memorial-content text-center">
         <!-- Placeholder for Marianne with bird image -->
         <div class="memorial-image mb-4">
-          <img src="https://petruschka.netlify.app/.netlify/images?url=https://petruschka-analog-mongo.onrender.com/images/memorial/marianne-with-bird.jpg&nf_resize=fit&w=800" 
-               alt="Marianne Hofer" 
-               class="img-fluid hadow memorial-photo"
-               width="800"
-               height="600"
-               loading="lazy"
-               (error)="onImageError($event)">
+          <img
+            src="/images/memorial/marianne-with-bird.jpg"
+            srcset="/images/memorial/marianne-with-bird.jpg 800w, /images/memorial/marianne-with-bird.jpg 600w, /images/memorial/marianne-with-bird.jpg 400w"
+            sizes="(max-width: 576px) 100vw, (max-width: 992px) 80vw, 800px"
+            alt="Marianne Hofer"
+            class="img-fluid shadow memorial-photo"
+            width="800"
+            height="600"
+            decoding="async"
+            loading="eager"
+            (error)="onImageError($event)">
         </div>
         
         <div class="memorial-text text-start lh-lg">
